Change the image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="card">
               <div class="card__body">
                 <img
-                  src="./assets/projects/web-school.PNG"
+                  src="./assets/projects/web-school.jpg"
                   alt="project image"
                 />
                 <h4>Website Sekolah</h4>
@@ -69,7 +69,7 @@
             <div class="card">
               <div class="card__body">
                 <img
-                  src="./assets/projects/registration-form.PNG"
+                  src="./assets/projects/registration-form.jpg"
                   alt="project image"
                 />
                 <h4>Form Registrasi</h4>
@@ -78,7 +78,7 @@
             </div>
             <div class="card">
               <div class="card__body">
-                <img src="./assets/projects/blog.PNG" alt="project image" />
+                <img src="./assets/projects/blog.jpg" alt="project image" />
                 <h4>Blog Pribadi</h4>
                 <p>Blog sederhana dengan layout flexbox</p>
               </div>
